force-app/main/default/objects/Sales_Agreement_Team__c/Sales_Agreement_Team__c.object-meta.xml
<CustomObject>
    <label>Sales Agreement Team</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>Sales Agreement Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Agreement Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>