force-app/main/default/objects/Sales_Agreement_Team__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KeyAccountManager</fullName>
                <label>Key Account Manager</label>
            </value>
            <value>
                <fullName>Analyst</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>