force-app/main/default/objects/Sales_Agreement_Team__c/fields/Sales_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Sales_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Agreement</label>
    <referenceTo>SalesAgreement</referenceTo>
    <relationshipLabel>Sales Agreement Teams</relationshipLabel>
    <relationshipName>Sales_Agreement_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>